# Reusable-code

./: .gitignore  .gitmodules
Pascal/Lazarus/Basics/: README.md
cpp/: README.md
cpp/CMake/EmptyCMakeProject/: Build.bat  Build.sh
cpp/CMake/Project_with_glfw_and_gtest/: .gitignore  .gitmodules  Build.bat  Build.sh
cpp/CMake/Project_with_glfw_and_gtest/Source/: CMakeLists.txt
cpp/CMake/Project_with_glfw_and_gtest/Source/BasicTests/: BasicTests.cpp
cpp/CMake/Project_with_glfw_and_gtest/Source/glfwApp/: Main.cpp
cpp/DesignPatterns/: Factory.cpp  Strategy.cpp
cpp/DesignPatterns/Singleton/: Singleton.cpp
cpp/STL/algorithm/: Copy.cpp  Sort.cpp  SortObjects.cpp
cpp/STL/containers/: Containers.cpp
cpp/const/: Const_cast.cpp  Consts.cpp
cpp/design_patterns/abstract_factory/: abstract_factory.cpp
cpp/design_patterns/factory_method/: factory_method_1.cpp  factory_method_2.cpp
cpp/design_patterns/strategy/: Strategy.cpp
cpp/object/: DesignPatterns  Private_destructor.cpp  SOLID  stack.cpp
cpp/object/functor/: BasicFunctor.cpp  EnemyComperator.cpp
cpp/object/inheritance/: Dogs.cpp  Sensors_abstract_class.cpp
cpp/pointers/: Function_ptr.cpp  PolimorphicDestructors.cpp
cpp/recursion/: AsciiX.cpp  recursions.cpp  recurson_calc.cpp
cpp/threads/: Async_future.cpp  Async_future2.cpp  Atomic.cpp  Mutex_lock_gurad.cpp  Mutex_lock_unlock.cpp  Stack_value_generator.cpp  Thread_race.cpp  Threads.cpp  Unique_thread_and_condition_var.cpp  jThreads.cpp
operators/: README.txt  complex_nums.cpp  vectors.cpp
pointers/: buffer.cpp  pointers.cpp
(+54 files in other folders)
